# full-stack-dev

back-end-101/back-end-101/task-2/: .gitignore
back-end-101/dev-core-102/: final_project_text_adventure.py  gitHub_basic.md  task_10_file_handling.py  task_13_library_management.py  task_14_todo_app.py  task_1_clean_code_practice.py  task_2_data_structures.py  task_5_trip_advisor.py  task_6_discount_calculator.py
back-end-101/dev-core-103/: dev-core-103_lesson2_dns_setup.txt  dev-core-103_lesson5_simple_server.py
back-end-101/dev-core-103/dev-core-103_lesson3/: dev-core-103_lesson3_tcp_client.py  dev-core-103_lesson3_tcp_server.py
back-end-101/dev-ops-101/task-1/: dev-ops-101-intro.txt
back-end-101/dev-ops-101/task-6/: process_status.txt
back-end-101/dev-ops-101/task-7/: .bashrc
back-end-101/task-1/: frameworks_overview.md
back-end-101/task-2/: app.py  pyproject.toml
back-end-101/task-3/: main.py
back-end-101/task-6/: .gitignore  app.py  pyproject.toml
back-end-101/task-7/: README.md  app.py
dev-core-102/: task_11_error_handling.py  task_12_algorithms_recipes.py  task_1_clean_code_practice.py  task_3_input_output.py  task_4_calculate_order.py  task_7_sports_statistics.py  task_9_recipe_management.py  test.md
dev-core-103/: dev-core-103_lesson1_client_server_sim.py  dev-core-103_lesson4_http_requests.py
dev-core-103/firewall_setup/: ufw_rules.txt
dev-ops-101/task 5/: results.txt
dev-ops-101/task-5/: system_info.sh
dev-ops-101/task-6/: command_log.txt
front-end-102/final-project/: script.js  styles.css
(+4 files in other folders)
